# dasAfterburner

./: CLAUDE.md  CMakeLists.txt  GEMINI.md  INSTALL.md
config/: vision.service
include/: app.hpp
models/: Fuel-640-640-yolov8.rknn
scripts/: build.sh  setup_orangepi.sh  start_vision.sh
src/: main.cpp
